# advent-of-code-2017

aoc2017-haskell/: aoc2017-haskell.cabal  stack.yaml
aoc2017-haskell/app/: Day1App.hs  Day2App.hs  Day3App.hs  Day4App.hs  Day5App.hs
aoc2017-haskell/bench/: Day5Bench.hs
aoc2017-haskell/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Helpers.hs  QuadTree.hs
aoc2017-haskell/test/: Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Spec.hs
aoc2017-purescript/: bower.json
aoc2017-purescript/src/: Day1.purs
aoc2017-purescript/src/app/: Day1App.purs
