name:                aoc2017-haskell
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/aoc2017-haskell#readme
license:             BSD3
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/aoc2017-haskell#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Day1, Day2, Day3, Helpers, QuadTree
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , composition
                     , containers
                     , massiv
  default-language:    Haskell2010

executable day1
  hs-source-dirs:      app
  main-is:             Day1App.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aoc2017-haskell
  default-language:    Haskell2010

executable day2
  hs-source-dirs:      app
  main-is:             Day2App.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aoc2017-haskell
  default-language:    Haskell2010

executable day3
  hs-source-dirs:      app
  main-is:             Day3App.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aoc2017-haskell
  default-language:    Haskell2010

test-suite aoc2017-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Day1Spec, Day2Spec, Day3Spec
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , aoc2017-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/aoc2017-haskell
